<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/record"
		android:icon="@drawable/record_disabled_32"
		android:title="@string/record"
		android:showAsAction="always" />
	<item android:id="@+id/settings"
		android:icon="@drawable/settings_32"
		android:title="@string/settings"
		android:showAsAction="always" />
	<item android:id="@+id/speakers"
		android:icon="@drawable/speakers_32"
		android:title="@string/speakers"
		android:showAsAction="always"/>
	<item android:id="@+id/help"
		android:icon="@drawable/help_32"
		android:title="@string/help"
		android:showAsAction="always" />
	<item android:id="@+id/mainlist"
		android:icon="@drawable/main_list_32"
		android:title="@string/mainlist"
		android:showAsAction="always" />
</menu>
